src/components/Main/Video.css
.video {
    display: flex;
    flex-direction: column;
    justify-items: center;
    position: relative;
    /* border: 1px solid white; */
    height: 33%;
    scroll-snap-align: start;

}

.video__player {
    /* object-fit: none;
    object-position: 90% 50%; */

    object-fit: cover;
    height: 100%;
    width: 100%;
}

.video__open {
    position: fixed;
    top: 0;
    flex:1;
    z-index: 4;
    /* max-width: 100%; */
    max-width: 720px;

    object-fit: cover;
}

.video__footer {
    position: absolute;
    width: 100%;
    /* top: 0px; */
    bottom: 0;
    /* background-color: black; */
    /* opacity: .9; */
    background: linear-gradient(to bottom, rgba(110,109,109,0.27) 0%, rgba(0,0,0,0.76) 50%, rgba(0,0,0,1) 75%);
}

@media only screen and (max-width: 600px) {}

